[metadata]
name = pyasdl
version = 20.11.29
description = ASDL Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/pyasdl
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt

[options.package_data]
pyasdl =
    static/asdl.gram
