[metadata]
name = pyasdl
version = 21.01.30
description = ASDL Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/pyasdl
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pegen==0.1.0
python_requires = >=3.9

[options.package_data]
pyasdl =
    static/asdl.gram
